User avatar size fix Header item alignment

--- a/resources/assets/sass/layout/control-bar.sass
+++ b/resources/assets/sass/layout/control-bar.sass
@@ -16,7 +16,9 @@
     margin: 0
   & .container
     @include touch
-      width: 97%
+      width: 100%
+      padding: 0 0.75rem
+
 
 .breadcrumbs__link
   & a
