--- a/resources/assets/sass/layout/header.sass
+++ b/resources/assets/sass/layout/header.sass
@@ -3,7 +3,7 @@
   background-color: #222831
   transition: height 0.5s ease-in
   & .container
-    padding: 0.625rem 0
+    padding: 0.625rem 0.75rem
 
 .header__logo
   max-width: 10rem
