--- a/resources/assets/sass/layout/nav.sass
+++ b/resources/assets/sass/layout/nav.sass
@@ -11,6 +11,7 @@
     background-color: transparent !important
 
 .nav-menu
+  padding: .5rem 0
   @include mobile
     background-color: #222831 !important
 
