--- a/resources/assets/sass/user.sass
+++ b/resources/assets/sass/user.sass
@@ -8,6 +8,7 @@
 
   & img
     border-radius: 50%
+    height: 100%
 
 .user__avatar--comment
     @extend .user__avatar
